<resources>
    <string name="app_name">ちくちくカウンター</string>
    <string name="title_Recognition">Recognition</string>
    <string name="title_Graph">Graph</string>
    <string name="title_BBS">BBS</string>

    <string name="start_speech">スピーチ開始</string>
    <string name="stop_speech">スピーチ終了</string>

    <string name="error">エラー</string>
    <string name="ok">OK</string>
    <string name="speech_not_available">音声認識が使用できません</string>
    <string name="speech_not_granted">マイクの使用を許可してください</string>
    <string name="prepare_speech">準備中…</string>
    <string name="ready_speech">スピーチできます</string>
    <string name="speech_error">音声認識中にエラーが発生しました\nエラーコード：%1$d</string>

    <!--  週間画面に挿入するテキスト -->
    <string name="week_title">%1$s ～ %2$s</string>
    <string name="week_count_text">%1$d回</string>
    <string name="today_sum_text">今日の合計</string>
    <string name="today_ratio_text">前日比</string>
    <string name="week_sum_text">週間合計</string>


    <!--  月間画面に挿入するテキスト -->
    <string name="month_title">%1$s年%2$s月</string>
    <string name="month_count_text">%1$d回</string>
    <string name="month_sum_text">月間合計</string>
    <string name="month_ratio_text">月間合計</string>
    <string name="month_ave_text">月間平均回数</string>

    <!--  年間画面に挿入するテキスト -->
    <string name="year_title">%1$s年</string>
    <string name="year_count_text">%1$d回\</string>
    <string name="year_count_min_max_text">%1$d回\n%2$d回</string>
    <string name="year_sum_text">年間合計</string>
    <string name="year_max_min_text">最大月回数\n最小月回数</string>
    <string name="year_ave_text">年間平均回数</string>

    <!-- グラフ画面共通で使用するテキスト -->
    <string name="graph_title">ちくちく回数</string>
    <string name="graph_week">週間</string>
    <string name="graph_month">月間</string>
    <string name="graph_year">年間</string>

    <!--通知 設定画面で使用するテキスト -->
    <string name="settings_notification_title">通知設定</string>
    <string name="settings_notification_check_Title">通知をする</string>
    <string name="settings_notification_check_yesterday">前日の回数を通知</string>
    <string name="settings_notification_check_today">当日の回数を通知</string>
    <string name="settings_notification_set_time">通知する時間帯を設定する</string>
    <string name="settings_notification_allow">></string>
    <string name="settings_notification_now_time_text">設定されている時間</string>
    <string name="settings_notification_now_time">No Data</string>

    <!-- 新規追加 設定画面で使用するテキスト -->
    <string name="settings_word_title">新規追加</string>
    <string name="settings_word_current">現在追加されている単語</string>
    <string name="settings_word_add">新規追加する単語</string>
    <string name="settings_word_submit">追加</string>

    <!-- スレッド追加画面で使用するテキスト -->
    <string name="bbs_add_title">タイトル</string>
    <string name="bbs_add_content">本文</string>
    <string name="bbs_add_submit">save</string>
    <string name="bbs_add_back">もどる</string>

    <!-- スレッド画面で使用するテキスト -->
    <string name="bbs_thread_submit">スレッドを作成する</string>

    <!-- リプライ画面で使用するテキスト -->
    <string name="reply_back">もどる</string>
    <string name="reply_comment">コメント</string>
    <string name="reply_edit_comment">コメントを入力</string>
    <string name="reply_send">返信</string>

</resources>