<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_recognition">

    <fragment
        android:id="@+id/navigation_recognition"
        android:name="com.example.main.ui.recognition.RecognitionFragment"
        android:label="@string/title_Recognition"
        tools:layout="@layout/fragment_recognition" />

    <fragment
        android:id="@+id/navigation_graph"
        android:name="com.example.main.ui.graph.GraphWeekFragment"
        android:label="@string/title_Graph"
        tools:layout="@layout/fragment_graph_week" />

    <fragment
        android:id="@+id/navigation_bbs"
        android:name="com.example.main.ui.bbs.BbsFragment"
        android:label="@string/title_BBS"
        tools:layout="@layout/fragment_bbs" />
</navigation>