<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFDD"
    tools:context=".ui.bbs.AddFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:focusableInTouchMode="true"
            android:hint="@string/bbs_add_title"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/add_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bbs_add_content"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_gravity="top"
            android:autofillHints=""
            android:background="@android:color/transparent"
            android:inputType="text"
            android:textSize="18sp" />

        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bbs_add_submit" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bbs_add_back" />

    </LinearLayout>

</RelativeLayout>